--- a/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/package.json
+++ b/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/package.json
@@ -14,12 +14,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.13",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.13",
     "@angular/compiler": "^7.2.13",
     "@angular/core": "^7.2.15",
     "@angular/forms": "^7.2.13",
     "@angular/http": "^7.2.13",
+    "@angular/material": "7.3.7",
     "@angular/platform-browser": "^7.2.13",
     "@angular/platform-browser-dynamic": "^7.2.13",
     "@angular/platform-server": "^7.2.13",
