--- a/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/package.json
+++ b/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/package.json
@@ -30,9 +30,11 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "2.6.5",
+    "g": "^2.0.1",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
-    "rxjs": "^6.4.0",
+    "rxjs": "7.0.0-alpha.1",
+    "rxjs-compat": "^6.5.2",
     "zone.js": "^0.9.0"
   },
   "devDependencies": {
@@ -54,7 +56,7 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.0.3",
     "tslint": "~5.15.0",
-    "typescript": "3.2.4",
+    "typescript": "^3.1.2",
     "webpack-cli": "^3.3.0"
   },
   "optionalDependencies": {
