--- a/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/tsconfig.json
+++ b/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "noStrictGenericChecks": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
